--- a/portfolio_app/templates/index.html
+++ b/portfolio_app/templates/index.html
@@ -9,7 +9,7 @@
     <div class="col-md-12">
       <div class="card shadow-lg">
         <img
-          src="{% static 'Leonardo_Diffusion_XL_lionel_messi_sitting_in_front_of_a_compu_3.jpg' %}"
+          src="{% static 'mateo.jpg' %}"
           class="card-img-top img-fluid rounded-circle shadow-lg mx-auto mt-3"
           alt="Imagen"
           style="width: 200px; height: 200px"
